fixed that annoying tabbar height bug (ul had too much padding, different to main site). fixed all outstanding css issues.

--- a/cc4/main.css
+++ b/cc4/main.css
@@ -3,9 +3,7 @@
 /*** standard html ***/
 * { margin: 0; padding: 0; }
 body { background-color: #fff; color: #333; font: 12px verdana, sans-serif !important; line-height:145% !important; text-align: center; padding:0 !important; }
-html>body {
-/*    font-size: 0.8em;*/
-}
+
 
 .box { text-align: left; margin: 0 auto; width: 91%; min-width: 765px; max-width: 1000px; } /* replaces #wrapper */
 .content-box { float: left; padding-top: 15px;/* border-top: 1px solid #ddd;*/ margin-right: 1%; overflow: hidden; }
@@ -53,7 +51,8 @@ a img {
 h1, h2, h3 { line-height: 120%; font-size: 150%; font-family: Georgia, serif; }
 h2 { margin-top: 25px; line-height: 140%; margin-bottom: 12px; }
 h3 { font-size: 125%; margin-top: 18px; }
-h4, .jurisdiction a:link { color: #773; font-size: 105%; font-weight: bold;}
+h4 { color: #773; font-size: 105%; font-weight: bold;}
+h4 a:link, h4 a:visited { color: #773; }
 
 p + a + h1, p + a + h2, p + a + h3, p + a + h4, p + a + h5, p + a + h6,
 ul + a + h1, ul + a + h2, ul + a + h3, ul + a + h4, ul + a + h5, ul + a + h6,
@@ -111,7 +110,7 @@ hr {
     position: absolute;
     /*top: -100px;
     right: 1em;*/
-    top: 60px; right:1em;
+    top: 20px; right:1em;
     z-index: top !important;
   color: #fff;
 }
@@ -565,8 +564,8 @@ a.cc-actions:hover {
 }
   
 /* nav tab-bar */
-#mainmenu {	position: relative;  background: url("images/tabbar-bg.png") repeat-x bottom left #383e32 /*fafffa*/;/* height: 2.4em;*/ margin-bottom: 10px; }
-ul#navbar { list-style-type: none; }
+#mainmenu {	position: relative; font-size: 12px !important; padding-top: 0.6em; background: url("images/tabbar-bg.png") repeat-x bottom left #383e32 /*fafffa*/; margin-bottom: 10px; }
+ul#navbar { list-style-type: none; padding:0;}
 ul#navbar li {float: left; height: 2.4em;  margin: 0.2em 2px 0 2px; background: url("images/tab-bg.png") repeat-x bottom left #f0f4f1; }
 ul#navbar li.edit { margin-left: 15px; background: url("images/tab-bg.png") repeat-x bottom left #efe2e2; }
 ul#navbar li.active { margin-top: 0; font-weight: bold; height: 2.5em; }
@@ -595,6 +594,7 @@ ul#navbar li.edit a:hover { background: url("images/tab-body-edit.png") no-repea
 #title h4 { font-size: 90%; padding-top: 10px;}
 #title img {  border: 1px solid #666; padding: 0 !important; margin-right: 15px; }
 #title #blurb { font-size: 60%; margin-bottom: 15px; }
+#international { width: 95%;}
 
 .block { clear: both; margin-bottom: 35px; padding-left: 1%; padding-right: 10%; }
 #alpha .block { padding-right: 1% !important; }
@@ -609,5 +609,13 @@ ul#navbar li.edit a:hover { background: url("images/tab-body-edit.png") no-repea
 .block .publish-pics { float: left; margin-right: 10px; margin-bottom: 25px; padding: 3px; border: 1px solid #ccc; }
 .block .excerpt { margin-left:  170px; }
 .block .comments { margin: 35px 0; }
+
+span.international {
+	display: block;
+	text-align: right;
+	font-size: 90%;
+	margin-right: 10px;
+	padding: 0;
+}
 
   
